Featured Fixed overflow

--- a/styles/Features.component.css
+++ b/styles/Features.component.css
@@ -1,7 +1,7 @@
 .feat_img img {
     /* max-width: 420px; */
     margin: 0 auto;
-    object-fit: scale-down;
+    object-fit: cover;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
